--- a/salikneta/templates/salikneta/includes/cashier_header.html
+++ b/salikneta/templates/salikneta/includes/cashier_header.html
@@ -137,7 +137,7 @@
        console.log(obj);
                if (obj[i].num_notif === 0){$("#notif_num").hide();}
                else{$("#notif_num").show().html(obj[i].num_notif);}
-               item = '<li><a href="#">';
+               item = '<li><a class="wide" href="#">';
                item += obj[i].msg;
                item +='<br><span class="small italic">'+obj[i].timestamp+'</span></a></li>';
                $("#notif_list").append(item);
