--- a/salikneta/templates/salikneta/transferOrderProducts.html
+++ b/salikneta/templates/salikneta/transferOrderProducts.html
@@ -170,7 +170,7 @@
                 <script>
                     $(document).ready(function() {
                         $('#cat_tbl').DataTable({
-                            "order": [[ 0, "desc" ]]
+                            "order": [[ 4, "asc" ]]
                         });
                         var today = new Date();
                         var dd = String(today.getDate()).padStart(2, '0');
